--- a/九宫格.html
+++ b/九宫格.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>九宫格呀哈哈</title>
     <meta name="viewport" content="width=device-width,initial-scale=1."/>
+    <link rel="stylesheet" type="text/css" href="九宫格.css"/>
     <style>
         .div1{
             margin: 1vw;
