最终版本呀哈哈

--- a/九宫格.html
+++ b/九宫格.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1."/>
     <link rel="stylesheet" type="text/css" href="九宫格.css"/>
 </head>
-<body>
+<body style="overflow: scroll;overflow-x: hidden">
 <h1>
     九宫格哈哈哈哈哈哈哈哈哈哈哈哈哈
 </h1>
