究极最终版本呀哈哈   隐藏的水平滚动条

--- a/九宫格.html
+++ b/九宫格.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="overflow: scroll;overflow-x: hidden">
 <head>
     <meta charset="UTF-8">
     <title>九宫格呀哈哈</title>
     <meta name="viewport" content="width=device-width,initial-scale=1."/>
     <link rel="stylesheet" type="text/css" href="九宫格.css"/>
 </head>
-<body style="overflow: scroll;overflow-x: hidden">
+<body style="overflow: auto;overflow-x: hidden">
 <h1>
     九宫格哈哈哈哈哈哈哈哈哈哈哈哈哈
 </h1>
