--- a/魔镜介绍页面.html
+++ b/魔镜介绍页面.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="en"style="overflow: scroll;overflow-x: hidden">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>It's a game</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1."/>
+    <meta name="viewport" content="width=device-width,hight=device-hight, initial-scale=1."/>
     <link rel="stylesheet" type="text/css" href="魔镜介绍页面.css"/>
 </head>
-<body style="overflow: auto;overflow-x: hidden">
+<body>
 <div class="outer">
-    <div class="title"></div>
+    <div class="title">
+        <img src="backbotton.png"/>
+        <img src="logo_03.png"/>
+    </div>
     <div class="content">
         葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具。
     </div>
