--- a/魔镜介绍页面.html
+++ b/魔镜介绍页面.html
@@ -3,20 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>It's a game</title>
-    <meta name="viewport" content="width=device-width,hight=device-hight, initial-scale=1."/>
+    <meta name="viewport" content="width=device-width,hight=device-hight, initial-scale=1.",minimum-scale="0.5,maximum-scale=2.0"/>
     <link rel="stylesheet" type="text/css" href="魔镜介绍页面.css"/>
 </head>
 <body>
 <div class="outer">
-    <div class="title">
-        <img src="backbotton.png"/>
+    <div class="returnbutton">
+        <img src="backbotton.png">
+    </div>
+    <div class="logo">
         <img src="logo_03.png"/>
     </div>
     <div class="content">
         葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具。
     </div>
-    <div class="qqgroup"></div>
-    <div class="homepagelinlk"></div>
+    <div class="qqgroup">
+        <img src="group_03.png">
+        22222222
+    </div>
+    <div class="homepagelinlk">
+        <img src="minilogo.png">
+        BJPTTeng
+    </div>
 </div>
 </body>
 </html>
